<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xmlns="http://maven.apache.org/POM/4.0.0"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.crossover.techtrail</groupId>

	<artifactId>Air-Ticket-Reservation-System</artifactId>

	<version>1.0.1</version>

	<packaging>jar</packaging>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>1.0.1.RELEASE</version>
	</parent>

	<name>Air Ticket Reservation System</name>
	
	<description>Spring Boot - Air Ticket Reservation System</description>

	<properties>
		<java.version>1.8</java.version>
		<guava.version>16.0.1</guava.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
	    <customArg/>
	</properties>

	<profiles>
		<profile>
			<id>profile1</id>
			<activation>
				<activeByDefault>false</activeByDefault>
			</activation>
	        <properties>
	            <customArg>-DmyUniqueToProfile1Args</customArg>
	        </properties>
			<distributionManagement>
			    <site>
			      	<id>airticket</id>
					<!-- File Protocol Linux -->
			      	<url>file:///opt/cloudhost/tomcat8/webapps/maven-report/</url>
			    </site>
			</distributionManagement>
		</profile>
		<profile>
			<id>profile2</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
	        <properties>
	            <customArg>-DmyUniqueToProfile2Args</customArg>
	        </properties>
			<distributionManagement>
			    <site>
			      	<id>airticket</id>
					<!-- File Protocol Windows -->
			      	<url>file:///C:/springsource/workspaces/ws_air_ticket_reservation_system/AirTicketReservationSystem/maven-report</url>
			    </site>
			</distributionManagement>
		</profile>
	</profiles>

	<dependencies>
        <dependency>
            <!-- Import dependency management from Spring Boot -->
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-dependencies</artifactId>
            <version>1.0.1.RELEASE</version>
            <type>pom</type>
            <scope>import</scope>
        </dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
			<exclusions>
				<exclusion>
					<artifactId>log4j-over-slf4j</artifactId>
					<groupId>org.slf4j</groupId>
				</exclusion>
				<exclusion>
					<artifactId>logback-classic</artifactId>
					<groupId>ch.qos.logback</groupId>
				</exclusion>
				<exclusion>
					<artifactId>logback-core</artifactId>
					<groupId>ch.qos.logback</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
            <version>1.0.1.RELEASE</version>
		</dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-security</artifactId>
            <version>1.0.1.RELEASE</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-test</artifactId>
            <version>4.0.3.RELEASE</version>
        </dependency>
        <dependency>
            <groupId>org.thymeleaf.extras</groupId>
            <artifactId>thymeleaf-extras-springsecurity4</artifactId>
            <version>2.1.2.RELEASE</version>
        </dependency>
		<dependency>
			<groupId>javax.ws.rs</groupId>
			<artifactId>jsr311-api</artifactId>
			<version>1.1.1</version>
		</dependency>
		<!-- Hibernate validator -->
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-validator</artifactId>
		</dependency>
		<!-- HSQLDB -->
		<dependency>
			<groupId>org.hsqldb</groupId>
			<artifactId>hsqldb</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.jasypt</groupId>
			<artifactId>jasypt</artifactId>
			<version>1.7</version>
		</dependency>
		<dependency>
		    <groupId>cglib</groupId>
		    <artifactId>cglib</artifactId>
		    <version>2.2.2</version>
		</dependency>
		<dependency>
			<groupId>commons-logging</groupId>
			<artifactId>commons-logging</artifactId>
			<version>1.1.3</version>
		</dependency>
 		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
		</dependency>
<!--  	
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<exclusions>
		      <exclusion> 
		        <groupId>org.slf4j</groupId>
		        <artifactId>slf4j-log4j12</artifactId>
		      </exclusion>
		    </exclusions> 
		</dependency>
 -->	
 	
		<dependency>
			<groupId>org.apache.tomcat.embed</groupId>
			<artifactId>tomcat-embed-core</artifactId>
		</dependency>
		<dependency>
			<groupId>org.apache.tomcat.embed</groupId>
			<artifactId>tomcat-embed-el</artifactId>
		</dependency>
		<dependency>
		    <groupId>com.google.code.gson</groupId>
		    <artifactId>gson</artifactId>
		    <version>2.2.4</version>
		</dependency>
<!-- 
		<dependency>
		    <groupId>ch.qos.logback</groupId>
		    <artifactId>logback-classic</artifactId>
		    <version>1.1.2</version>
			<exclusions>
		      <exclusion> 
		        <groupId>org.slf4j</groupId>
		        <artifactId>slf4j-log4j12</artifactId>
		      </exclusion>
		    </exclusions> 
		</dependency>
 -->
 		<dependency>
			<groupId>org.spockframework</groupId>
			<artifactId>spock-core</artifactId>
		</dependency>
		<!--  -->
		<dependency>
		    <groupId>com.fasterxml.jackson.core</groupId>
		    <artifactId>jackson-core</artifactId>
		    <version>2.2.1</version>
		    <scope>test</scope>
		</dependency>
		<dependency>
		    <groupId>com.fasterxml.jackson.core</groupId>
		    <artifactId>jackson-databind</artifactId>
		    <version>2.2.1</version>
		    <scope>test</scope>
		</dependency>
		<dependency>
		    <groupId>org.hamcrest</groupId>
		    <artifactId>hamcrest-all</artifactId>
		    <version>1.3</version>
		    <scope>test</scope>
		</dependency>
		<dependency>
		    <groupId>junit</groupId>
		    <artifactId>junit</artifactId>
		    <version>4.12</version>
		    <scope>test</scope>
		    <exclusions>
		        <exclusion>
		            <artifactId>hamcrest-core</artifactId>
		            <groupId>org.hamcrest</groupId>
		        </exclusion>
		    </exclusions>
		</dependency>
		<dependency>
		    <groupId>org.mockito</groupId>
		    <artifactId>mockito-core</artifactId>
		    <version>1.9.5</version>
		    <scope>test</scope>
		</dependency>
		<dependency>
		    <groupId>org.springframework</groupId>
		    <artifactId>spring-test</artifactId>
		    <version>3.2.3.RELEASE</version>
		    <scope>test</scope>
		</dependency>
		<dependency>
		    <groupId>com.github.springtestdbunit</groupId>
		    <artifactId>spring-test-dbunit</artifactId>
		    <version>1.0.0</version>
		    <scope>test</scope>
		</dependency>
		<dependency>
		    <groupId>org.dbunit</groupId>
		    <artifactId>dbunit</artifactId>
		    <version>2.4.8</version>
		    <scope>test</scope>
		</dependency>
		<dependency>
		    <groupId>com.jayway.jsonpath</groupId>
		    <artifactId>json-path</artifactId>
		    <version>0.8.1</version>
		    <scope>test</scope>
		</dependency>
		<dependency>
		    <groupId>com.jayway.jsonpath</groupId>
		    <artifactId>json-path-assert</artifactId>
		    <version>0.8.1</version>
		    <scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.codehaus.jettison</groupId>
			<artifactId>jettison</artifactId>
			<version>1.1</version>
		</dependency>
		<dependency>
		    <groupId>com.google.guava</groupId>
		    <artifactId>guava</artifactId>
		    <version>19.0</version>
		</dependency>
 		<dependency>
            <groupId>javax.inject</groupId>
            <artifactId>javax.inject</artifactId>
            <version>1</version>
        </dependency>
		<!-- these 2 dependences solve the issue spring mvc not showing jsps --> 		
	   <dependency>
	        <groupId>org.apache.tomcat.embed</groupId>
	        <artifactId>tomcat-embed-jasper</artifactId>
	        <scope>provided</scope>
	    </dependency>
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>jstl</artifactId>
			<version>1.2</version>
		</dependency>
		<dependency>
		    <groupId>com.sun.jersey</groupId>
		    <artifactId>jersey-client</artifactId>
		    <version>1.9.1</version>
		</dependency>
		<dependency>
		    <groupId>commons-lang</groupId>
		    <artifactId>commons-lang</artifactId>
		    <version>2.6</version>
		</dependency>
		<dependency>
		    <groupId>org.mockito</groupId>
		    <artifactId>mockito-all</artifactId>
		    <version>1.9.5</version>
		</dependency>
		<dependency>
		    <groupId>org.webjars</groupId>
		    <artifactId>bootstrap</artifactId>
		    <version>3.3.5</version>
		</dependency>
		<dependency>
		    <groupId>org.webjars</groupId>
		    <artifactId>jquery</artifactId>
		    <version>2.2.4</version>
		</dependency>
		<dependency>
		    <groupId>org.webjars</groupId>
		    <artifactId>angularjs</artifactId>
		    <version>1.5.5</version>
		</dependency>
		<dependency>
		    <groupId>org.webjars</groupId>
		    <artifactId>three.js</artifactId>
		    <version>r77  </version>
		</dependency>
		<dependency>
		    <groupId>org.webjars</groupId>
		    <artifactId>webjars-locator</artifactId>
		    <version>0.28</version>
		</dependency>
		<dependency>
		    <groupId>mysql</groupId>
		    <artifactId>mysql-connector-java</artifactId>
		    <version>5.1.39</version>
		</dependency>
		<dependency>
		    <groupId>org.springframework</groupId>
		    <artifactId>spring-jdbc</artifactId>
		    <version>3.0.5.RELEASE</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-orm</artifactId>
			<version>3.0.5.RELEASE</version>
		</dependency>
        <dependency>
			<groupId>commons-dbcp</groupId>
			<artifactId>commons-dbcp</artifactId>
			<version>1.4</version>
		</dependency>
		<dependency>
			<groupId>commons-pool</groupId>
			<artifactId>commons-pool</artifactId>
			<version>1.6</version>
		</dependency>
<!-- 		
		 <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-jdbc</artifactId>
        </dependency>
		<dependency>
		  <groupId>org.slf4j</groupId>
		  <artifactId>slf4j-log4j12</artifactId>
		  <version>1.7.5</version>
		</dependency>
-->		
		<dependency>
		    <groupId>org.webjars</groupId>
		    <artifactId>font-awesome</artifactId>
		    <version>4.0.3</version>
		</dependency>
		<dependency>
		    <groupId>org.webjars.bower</groupId>
		    <artifactId>angular-promise-tracker</artifactId>
		    <version>2.1.0</version>
		</dependency>
	</dependencies>

	<build>
		<sourceDirectory>src/main/java</sourceDirectory>
		<resources>
			<resource>
				<directory>src/conf/properties</directory>
				<excludes>
					<exclude>**/*.java</exclude>
				</excludes>
			</resource>
	        <resource>
	            <filtering>true</filtering>
	            <directory>src/test/resources</directory>
	            <includes>
	                <include>**/*.properties</include>
	                <include>**/*.xml</include>
	            </includes>
	            <excludes>
	                <exclude>**/*local.properties</exclude>
	            </excludes>
	        </resource>
	        <resource>
	            <directory>src/main/resources</directory>
	            <includes>
	                <include>**/*.properties</include>
	                <include>**/*.xml</include>
	            </includes>
	        </resource>
	    </resources>
    		 
		<plugins>
			<!-- Spring Boot Maven -->
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<configuration>
					<archive>
						<manifest>
							<mainClass>Application</mainClass>
						</manifest>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
                	<!-- <argLine>-XX:MaxPermSize=512m -XX:PermSize=256m -Xmx2048m -Xms1024m</argLine> -->
                	<!-- <argLine>-XX:MaxPermSize=512m -XX:PermSize=256m -XX:-UseGCOverheadLimit -Xmx2048m -Xms1024m</argLine> -->
                	<!-- <argLine>-XX:-UseGCOverheadLimit -Xmx3072m -Xms1024m</argLine> -->
                	<!-- <argLine>-XX:MaxPermSize=512m -XX:PermSize=256m -Xmx2048m -Xms1024m</argLine> -->
                	<argLine>${customArg} -XX:MaxPermSize=512m -XX:PermSize=256m -Xmx2048m -Xms1024m</argLine>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-war-plugin</artifactId>
				<version>3.1</version>
				<configuration>
					<warSourceDirectory>WebContent</warSourceDirectory>
					<failOnMissingWebXml>false</failOnMissingWebXml>
				</configuration>
				<executions>
					<execution>
						<phase>package</phase>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-antrun-plugin</artifactId>
				<version>1.1</version>
				<executions>
					<execution>
						<phase>validate</phase>
						<goals>
							<goal>run</goal>
						</goals>
						<configuration>
							<tasks>
								<echo>${artifactId}</echo>
								<echo>${version}</echo>
								<echo>${customArg}</echo>
								<echo>${argLine}</echo>
							</tasks>
						</configuration>
					</execution>
				</executions>
			</plugin>		
			<!-- Separates the unit tests from the integration tests. -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<!-- Skip the default running of this plug-in (or everything is run twice...see below) -->
					<skip>true</skip>
					<!-- <skip>false</skip> -->
					<!-- Show 100% of the lines from the stack trace (doesn't work) -->
					<trimStackTrace>false</trimStackTrace>
				</configuration>
				<executions>
					<execution>
						<id>unit-tests</id>
						<phase>test</phase>
						<goals>
							<goal>test</goal>
						</goals>
						<configuration>
							<!-- Never skip running the tests when the test phase is invoked -->
							<skip>false</skip>
							<includes>
								<!-- Include unit tests within integration-test phase. -->
								<include>**/*Test*.java</include>
								<!-- <include>**/NexServerDaoTest.java</include> -->
							</includes>
							<excludes>
								<!-- Exclude integration tests within (unit) test phase. -->
								<exclude>**/*IntegrationTests.java</exclude>
							</excludes>
						</configuration>
					</execution>
					<execution>
						<id>integration-tests</id>
						<phase>integration-test</phase>
						<goals>
							<goal>test</goal>
						</goals>
						<configuration>
							<!-- Never skip running the tests when the integration-test phase is invoked -->
							<!--  <skip>false</skip> -->
							<skip>true</skip>
							<includes>
								<!-- Include integration tests within integration-test phase. -->
								<include>**/*IntegrationTests.java</include>
							</includes>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<!-- Workaround for cobertura not working with java 8. -->
	       <plugin>  
	            <groupId>org.codehaus.mojo</groupId>  
	            <artifactId>cobertura-maven-plugin</artifactId>  
	            <version>2.6</version>  
	            <dependencies>  
	                <dependency>  
	                    <groupId>org.ow2.asm</groupId>  
	                    <artifactId>asm</artifactId>  
	                    <version>5.0.3</version>  
	                </dependency>  
	            </dependencies>  
	        </plugin>  
		</plugins>
		<extensions>
			<extension>
				<groupId>org.apache.maven.wagon</groupId>
				<artifactId>wagon-webdav-jackrabbit</artifactId>
				<version>1.0-beta-7</version>
			</extension>
		</extensions>
		<pluginManagement>
			<plugins>
				<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>
											org.apache.maven.plugins
										</groupId>
										<artifactId>
											maven-antrun-plugin
										</artifactId>
										<versionRange>
											[1.1,)
										</versionRange>
										<goals>
											<goal>run</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore></ignore>
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-project-info-reports-plugin</artifactId>
				<version>2.7</version>
				<reportSets>
					<reportSet>
						<reports>
							<report>index</report>
							<report>plugin-management</report>
							<report>distribution-management</report>
							<report>dependency-info</report>
							<report>scm</report>
							<!-- <report>mailing-list</report> -->
							<!-- <report>issue-tracking</report> -->
							<report>cim</report>
							<report>plugins</report>
							<!-- <report>license</report> -->
							<report>project-team</report>
							<report>summary</report>
							<report>dependencies</report>
						</reports>
					</reportSet>
				</reportSets>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.9.1</version>
				<reportSets>
					<reportSet>
						<reports>
							<report>javadoc</report>
						</reports>
					</reportSet>
				</reportSets>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-report-plugin</artifactId>
				<version>2.18.1</version>
			</plugin>			
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>cobertura-maven-plugin</artifactId>
				<version>2.6</version>
			</plugin>			
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>findbugs-maven-plugin</artifactId>
				<version>3.0.1</version>
			</plugin>
			<!--
			<plugin>
				<artifactId>maven-clover-plugin</artifactId>
			</plugin>			
			-->
			<plugin>
    			<artifactId>maven-clover2-plugin</artifactId>
				<groupId>com.atlassian.maven.plugins</groupId>
				<version>3.1.10.1</version>
			</plugin>			
		</plugins>
	</reporting>

	<developers>
		<developer>
			<id>ces_ch</id>
			<name>Cesar Francisco Chavez Maldonado</name>
			<email>ces_ch@hotmail.com</email>
			<roles>
				<role>Developer</role>
			</roles>
			<organization>Private</organization>
			<timezone>-5</timezone>
		</developer>
	</developers>

	<organization>
		<name>Private</name>
		<url>http://dev-war-app.azurewebsites.net/</url>
	</organization>

</project>
